Set text-overflow: ellipsis; to row selector numbers, fixing internal bug #244284

--- a/src/css/structure/modules/infragistics.ui.grid.css
+++ b/src/css/structure/modules/infragistics.ui.grid.css
@@ -1503,7 +1503,8 @@ body[dir="rtl"] .ui-iggrid-featurechoosericoncontainer {
 }
 
 .ui-iggrid-rowselector-class .ui-iggrid-rowselector-row-number {
-    float : left;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .ui-iggrid-rowselector-header {
